--- a/authentication-lab/templates/add_tweet.html
+++ b/authentication-lab/templates/add_tweet.html
@@ -5,6 +5,21 @@
     <title>Title</title>
 </head>
 <body>
+    <form method="POST" action="/add_tweet">
+
+        <div>
+            <label>your title</label>
+            <div class="input-group">
+                <input type="text"  name="title" >
+            </div>
+                    <div>
+            <label>your text</label>
+            <div class="input-group">
+                <input type="text"  name="text" maxlength="280">
+            </div>
+                        <div><input type="submit"/></div>
+                    </div></form>
+
     Great Job!
 </body>
 </html>
